# Web-Scraping-Workspace

./: .gitignore  README.md  pyproject.toml
EW/: getVendors.py  parse.py
EW24/: README.md  getVendors.py
Home-Depot-Stores/: README.md  home_depot_stores.csv  scrape.py
Lowes-Stores/: README.md  lowes_stores.csv  scrape.py  states.json
NHS24/: getVendors.py
PLMA/: README.md  parser.js
WFF23/: data.json  getVendors.py  parse.py  scrape.py  vendors.html  vendors.txt
WFF23/pages/: 100387.html  100438.html  100454.html  100715.html  100717.html  100931.html  100943.html  100978.html  101141.html  101321.html  101423.html  101496.html  10155.html  101569.html  101589.html  101652.html  101665.html  1018.html  101919.html  101926.html  101992.html  102212.html  102290.html  102319.html  102400.html  102578.html  102660.html  102666.html  102687.html  102704.html  102729.html  102886.html  102948.html  102952.html  102964.html  103044.html  103084.html  103207.html  103482.html  1038.html  (+1014 more)
WFF24/: README.md  getVendors.py  parse.py  scrape.py
cosmoprof/: README.md  getVendors.py  parse.py  scrape.py
expowest2026/: README.md  getVendors.py  parse.py  scrape.py
mapyourshow/: README.md  getVendors.py  parse-2025.py  parse-2026.py  scrape.py
nhs/: README.md  getVendors.py  parse.py  scrape.py
pgashow/: README.md  scrape.py
smallworldlabs/: README.md  scrape.py
specialtyfood/: README.md  getVendors.py  parse.py  scrape.py
